<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/insurance_certificate"/>

        <Button
            android:id="@+id/frag4btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/marriage_registration_certificate"/>

        <Button
            android:id="@+id/frag4btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/health_care_card"/>

        <Button
            android:id="@+id/frag4btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/job_card"/>

        <Button
            android:id="@+id/frag4btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/employee_identity_card"/>

        <Button
            android:id="@+id/frag4btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/passport"/>

        <Button
            android:id="@+id/frag4btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/e_pass"/>

        <Button
            android:id="@+id/frag4btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/fire_safety_licence"/>

        <Button
            android:id="@+id/frag4btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/arms_licence"/>

        <Button
            android:id="@+id/frag4btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag4doc10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/address_proof_certificate"/>

        <Button
            android:id="@+id/frag4btn10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>
</LinearLayout>
