<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/value_added_tax_certificate"/>

        <Button
            android:id="@+id/frag3btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/incorporation_certification"/>

        <Button
            android:id="@+id/frag3btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/pan_card"/>

        <Button
            android:id="@+id/frag3btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/no_objection_certificate"/>

        <Button
            android:id="@+id/frag3btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/medical_fitness_certificate"/>

        <Button
            android:id="@+id/frag3btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/medical_certificate"/>

        <Button
            android:id="@+id/frag3btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/driving_licence"/>

        <Button
            android:id="@+id/frag3btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/pollution_certificate"/>

        <Button
            android:id="@+id/frag3btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/vaical_fitness_certificate"/>

        <Button
            android:id="@+id/frag3btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag3doc10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Dark"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rc"/>

        <Button
            android:id="@+id/frag3btn10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:textColor="@color/lightPurple"
            android:gravity="center"
            android:text="@string/uploadBtn"/>

    </LinearLayout>
</LinearLayout>
